--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Lecture Recording Player</string>
     <string name="find_recordings">Find recordings</string>
-    <string name="title_activity_canvas_browser">CanvasBrowser</string>
+    <string name="title_activity_canvas_browser">CANVAS Browser</string>
+    <string name="title_activity_recording_browser">Recording List</string>
     <string name="list_recordings">List Recordings</string>
 </resources>
