--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_recording_browser">Recording List</string>
     <string name="list_recordings">List Recordings</string>
     <string name="title_activity_recording_view">Lecture Recording</string>
+    <string name="download">Download</string>
 </resources>
