Moved most download logic into Recording, allows for parallel d/l

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="title_activity_recording_view">Lecture Recording</string>
     <string name="download">Download</string>
     <string name="downloading">Downloading</string>
+    <string name="downloaded">Downloaded</string>
+    <string name="error">Error</string>
 </resources>
