--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="downloading">Downloading</string>
     <string name="downloaded">Downloaded</string>
     <string name="error">Error</string>
+    <string name="starting">Starting</string>
 </resources>
