--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="download">Download</string>
     <string name="downloading">Downloading</string>
     <string name="downloaded">Downloaded</string>
+    <string name="delete">Delete</string>
     <string name="error">Error</string>
     <string name="starting">Authenticating</string>
 </resources>
