--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,11 @@
     <string name="desc_view">View and manage already added recordings</string>
     <string name="desc_scan">Automatically scan Canvas for recordings</string>
     <string name="desc_add">Manually add recordings from Canvas</string>
-    <string name="scrapeText">Scraping for links...</string>
+    <string name="scrapeText">Scraping for links…</string>
     <string name="canvas_scraper">Canvas Scraper (BETA)</string>
-    <string name="authenticating">Authenticating...</string>
+    <string name="authenticating">Authenticating…</string>
+    <string name="scrape_title">Courses to scrape</string>
+    <string name="scrape_desc">Scraping many courses may take a very long time</string>
+    <string name="start">Start</string>
+    <string name="tokenError">Unable to get authentication token - Please try again</string>
 </resources>
