--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,8 @@
     <string name="title_activity_video_player">VideoPlayerActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="select_player_desc">Would you like to use the built-in or an external video player?</string>
+    <string name="select_player_title">Select Player</string>
+    <string name="select_player_builtin">Built-in</string>
+    <string name="select_player_external">External</string>
 </resources>
